--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --init"
+    "dev": "tsx watch ./src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,8 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
-    "fastify": "^4.26.2"
+    "dotenv": "^16.4.5",
+    "fastify": "^4.26.2",
+    "http-status": "^1.7.4"
   }
 }
