--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 DEBUGGER=true
 SERVER_PORT=3333
 API_VERSION="1.0"
+
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=1234
+DB_NAME=short-link-node
